--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-teloxide = { version = "0.13", features = ["macros", "native-tls-vendored"] }
+teloxide = { version = "0.13", features = ["macros"] }
 tokio = { version = "1", features = ["full"] }
 log = "0.4"
 fern = "0.6"
 chrono = "0.4"
 dotenvy = "0.15"
 rand = "0.8"
-reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
+reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
