--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 TELOXIDE_TOKEN=your_bot_token_here
 ALLOWED_CHAT_ID=chat_id
 YOUTUBE_API_KEY=your_youtube_api_key_here
+GROQ_API_KEY=your_groq_api_key_here
+GROQ_SYSTEM_PROMPT=your_system_prompt
