--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ rand = "0.8"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+futures = "0.3"
