--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 TELOXIDE_TOKEN=your_bot_token_here
 ALLOWED_CHAT_ID=chat_id
+ALLOWED_USER_IDS=123456789,987654321
 YOUTUBE_API_KEY=your_youtube_api_key_here
 GROQ_API_KEY=your_groq_api_key_here
 GROQ_SYSTEM_PROMPT=your_system_prompt
